[package]
name = "domain_resolver"
version = "0.1.0"
edition = "2021"


[dependencies]
rsdns = { version="0.15.0", features=["net-tokio"] }
futures = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.26"
random-string = "0.1.2"
clap = { version = "4.3.2", features = ["derive"] }
regex = "1.4.2"
